Update change log for 1.1

--- a/Changelog.html
+++ b/Changelog.html
@@ -14,6 +14,27 @@
   </style>
 </head>
 <body>
+<p class="p1"><b>SkyCheckers (1.1)</b></p>
+<p class="p1">*Migrated from SDL1 to SDL2</p>
+<p class="p1">*Removed choosing video modes in favor of resizing window / toggling fullscreen</p>
+<p class="p1">*Improved font rendering by scaling text more correctly</p>
+<p class="p1">*Improved audio mixing by using next unavailable channel better</p>
+<p class="p1">*Improved animation timing loop</p>
+<p class="p1">*Improved gamepad support to remember which gamepads were connected and by allowing to clear out existing mappings</p>
+<p class="p1">*Improved AI logic including when to fire and when to change directions</p>
+<p class="p1">*Improved keyboard state by not dropping state of first key when next key is held down</p>
+<p class="p1">*Improved spawning location by avoiding to spawn on same row/column as another character</p>
+<p class="p1">*Added hold escape for 1 second to exit a game to prevent accidental exits</p>
+<p class="p1">*Added fading animation to show character needs to reload weapon</p>
+<p class="p1">*Added sandboxing support for macOS</p>
+<p class="p1">*Removed GLUT and deprecated OpenGL usage</p>
+<p class="p1">*Added Metal renderer for macOS and Direct3D renderer for Windows which are now used by default</p>
+<p class="p1">*Improved netcode by adding packet numbering, resending, message aggregating, position interpolation, client side prediction, error correction, IPv6 support.</p>
+<p class="p1">*Added connect to server screen for netcode</p>
+<p class="p1">*Fixed multi-thread race conditions with netcode</p>
+<p class="p1">*Added more graceful handling when a client disconnects</p>
+<p class="p1">*Adjusted colors of characters, tiles, sky, text slightly</p>
+<p class="p2"><b></b><br></p>
 <p class="p1"><b>SkyCheckers (1.0.3)</b></p>
 <p class="p1">*Add 64-bit support for macOS</p>
 <p class="p1">*Move Windows project to MSVC compiler & project (no more MinGW)</p>
