Update changelog for 1.2

--- a/Changelog.html
+++ b/Changelog.html
@@ -14,6 +14,22 @@
   </style>
 </head>
 <body>
+<p class="p1"><b>SkyCheckers (1.2)</b></p>
+<p class="p1">*Ported game to iOS and tvOS devices</p>
+<p class="p1">*Added tutorial to the game</p>
+<p class="p1">*Added pause menu to the game</p>
+<p class="p1">*Upgraded Windows builds to 64-bit</p>
+<p class="p1">*Migrated macOS architecture away from using SDL</p>
+<p class="p1">*Improved gamepad support (plug 'n play instead of configuration bindings based)</p>
+<p class="p1">*Changed audio effects and tweaked graphics including a new tile cracked animation</p>
+<p class="p1">*Improved AI logic</p>
+<p class="p1">*Reorganized game menus</p>
+<p class="p1">*Stabilized user defaults for all platforms</p>
+<p class="p1">*Added better support for different screen sizes and aspect ratios</p>
+<p class="p1">*Added local IP address retrieval attempt when hosting a game</p>
+<p class="p1">*Improved letting system idle when game is inactive</p>
+<p class="p1">*Remove OpenGL support for macOS and Windows</p>
+<p class="p2"><b></b><br></p>
 <p class="p1"><b>SkyCheckers (1.1)</b></p>
 <p class="p1">*Migrated from SDL1 to SDL2</p>
 <p class="p1">*Removed choosing video modes in favor of resizing window / toggling fullscreen</p>
