--- a/Changelog.html
+++ b/Changelog.html
@@ -1,3 +1,4 @@
+<!-- This document is licensed under CC BY-SA 3.0: https://creativecommons.org/licenses/by-sa/3.0/ -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
