--- a/Changelog.html
+++ b/Changelog.html
@@ -15,6 +15,15 @@
   </style>
 </head>
 <body>
+<p class="p1"><b>SkyCheckers (1.3)</b></p>
+<p class="p1">*Added external keyboard support for iOS</p>
+<p class="p1">*Added arm64 / Apple silicon support for macOS</p>
+<p class="p1">*Rewrote Windows backend to use native APIs instead of SDL</p>
+<p class="p1">*Fixed potential crash when receiving gamepad events too early on macOS</p>
+<p class="p1">*Improved gamepad support on macOS 11 onwards</p>
+<p class="p1">*Improved memory usage on iOS/tvOS and removing redundant bindings with Metal renderer</p>
+<p class="p1">*Updated runtime dependencies for Linux</p>
+<p class="p2"><b></b><br></p>
 <p class="p1"><b>SkyCheckers (1.2)</b></p>
 <p class="p1">*Ported game to iOS and tvOS devices</p>
 <p class="p1">*Added tutorial to the game</p>
