--- a/Changelog.html
+++ b/Changelog.html
@@ -15,6 +15,11 @@
   </style>
 </head>
 <body>
+<p class="p1"><b>SkyCheckers (1.3.1)</b></p>
+<p>*Add ArcadeGame category to linux desktop specification</p>
+<p>*Update SDL for linux to 2.28.3</p>
+<p>*Fix issue with rendering text on some linux systems</p>
+<p class="p2"><b></b><br></p>			
 <p class="p1"><b>SkyCheckers (1.3)</b></p>
 <p class="p1">*Added external keyboard support for iOS</p>
 <p class="p1">*Added arm64 / Apple silicon support for macOS</p>
